Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.3.0
-
None
Description
Query:
select t1.field_100 FROM table_3 t1 INNER JOIN t1.field_86 t3 WHERE NOT EXISTS (SELECT tt1.pos AS int_col FROM t1.field_102.field_104.field_108.field_110 tt1 CROSS JOIN t1.field_86 tt2 WHERE t1.field_85 = tt2.key);
Stack Trace:
@ 0x7fd372cc001d impala::Coordinator::ValidateCollectionSlots() @ 0x7fd372cbfdc1 impala::Coordinator::GetNext() @ 0x7fd3725c03f7 impala::ImpalaServer::QueryExecState::FetchNextBatch() @ 0x7fd3725be4ad impala::ImpalaServer::QueryExecState::FetchRowsInternal() @ 0x7fd3725bdb51 impala::ImpalaServer::QueryExecState::FetchRows() @ 0x7fd3725b1380 impala::ImpalaServer::FetchInternal() @ 0x7fd3725acc9c impala::ImpalaServer::fetch() @ 0x7fd37389b282 beeswax::BeeswaxServiceProcessor::process_fetch() @ 0x7fd3738996c0 beeswax::BeeswaxServiceProcessor::dispatchCall() @ 0x7fd37385c423 impala::ImpalaServiceProcessor::dispatchCall() @ 0x7fd373816977 apache::thrift::TDispatchProcessor::process() @ 0x1045a8a apache::thrift::server::TThreadPoolServer::Task::run() @ 0x10305bf apache::thrift::concurrency::ThreadManager::Task::run() @ 0x103333a apache::thrift::concurrency::ThreadManager::Worker::run() @ 0x7fd37328a819 impala::ThriftThread::RunRunnable() @ 0x7fd37328bfe1 boost::_mfi::mf2<>::operator()() @ 0x7fd37328be3c boost::_bi::list3<>::operator()<>() @ 0x7fd37328bbcd boost::_bi::bind_t<>::operator()() @ 0x7fd37328baee boost::detail::function::void_function_obj_invoker0<>::invoke() @ 0x7fd372d9d706 boost::function0<>::operator()() @ 0x7fd371567737 impala::Thread::SuperviseThread() @ 0x7fd371570041 boost::_bi::list4<>::operator()<>() @ 0x7fd37156ff8b boost::_bi::bind_t<>::operator()() @ 0x7fd37156ff50 boost::detail::thread_data<>::run() @ 0x7fd3709a8a4a (unknown) @ 0x7fd36fe55182 start_thread @ 0x7fd36e03647d (unknown)
F0930 16:36:12.786176 21557 coordinator.cc:908] Check failed: tuple->IsNull(slot_desc->null_indicator_offset())
Attachments
Issue Links
- is related to
-
IMPALA-2367 Crash: impala::Sorter::Run::AddBatch
-
- Resolved
-